--- a/Tools/Helpers/doorstop_config.ini
+++ b/Tools/Helpers/doorstop_config.ini
@@ -2,7 +2,7 @@
 # |      |   _   |   __ \   __ \       |    |  |
 # |   ---|       |      <   __ <   -   |       |
 # |______|___|___|___|__|______/_______|__|____|
-#               https://tinyurl.com/carbon-core                                  
+#         github.com/Carbon-Modding/Carbon.Core
 
 [General]
 enabled=true
