--- a/Carbon.Core/Carbon.Patch/Carbon.Patch.csproj
+++ b/Carbon.Core/Carbon.Patch/Carbon.Patch.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk" DefaultTargets="Restore;Clean;Build">
+﻿<Project Sdk="Microsoft.NET.Sdk" DefaultTargets="Clean;Build">
   <PropertyGroup>
     <Deterministic>true</Deterministic>
     <FileAlignment>512</FileAlignment>
@@ -19,14 +19,15 @@
   <PropertyGroup>
     <Version>1.0.0.0</Version>
     <FileVersion>$(Version)</FileVersion>
+    <StartupObject>Carbon.Patch.Program</StartupObject>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
     <DefineConstants>DEBUG;TRACE;WIN</DefineConstants>
     <OutputPath>bin\Debug\</OutputPath>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
+    <DebugType>embedded</DebugType>
     <Optimize>true</Optimize>
   </PropertyGroup>
 
@@ -34,8 +35,7 @@
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
     <DefineConstants>DEBUG;TRACE;WIN</DefineConstants>
     <OutputPath>bin\DebugUnix\</OutputPath>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
+    <DebugType>embedded</DebugType>
     <Optimize>true</Optimize>
   </PropertyGroup>
 
@@ -43,6 +43,7 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <DefineConstants>TRACE;WIN</DefineConstants>
     <OutputPath>bin\Release\</OutputPath>
+    <DebugType>none</DebugType>
     <Optimize>true</Optimize>
   </PropertyGroup>
 
@@ -50,6 +51,7 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <DefineConstants>TRACE;UNIX</DefineConstants>
     <OutputPath>bin\ReleaseUnix\</OutputPath>
+    <DebugType>none</DebugType>
     <Optimize>true</Optimize>
   </PropertyGroup>
 
