Update existing actions; add new unstable action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,11 @@
-name: 🦺 Build Carbon
+name: 🦺 Validate build status
 
 on:
   push:
-    branches: [ "alpha", "beta", "main" ]
+    branches: [ "alpha" ]
     
   pull_request:
-    branches: [ "alpha", "beta", "main" ]
+    branches: [ "alpha" ]
 
 jobs:
   build:
