--- a/.github/workflows/unstable.yml
+++ b/.github/workflows/unstable.yml
@@ -1,30 +1,30 @@
-name: 🌙 Nightly build
+name: 🔥 Unstable weekly build
 
 on:
   # allow manual action trigger
   workflow_dispatch:
   
   schedule:
-    - cron: '0 7 * * *'
+    - cron: '0 7 * * 0'
     # technically this is more a "morningly" build
     # but we do work late.. :-)
 
 jobs:
-  nightly:
-    name: 🌙 Update the nightly release tag
+  unstable:
+    name: 🔥 Update the unstable release tag
     runs-on: ubuntu-latest
     
     steps:    
     - name: 🔗 Checkout source code from github
       uses: actions/checkout@v3
       with:
-        ref: alpha
+        ref: beta
         
     - name: 📅 Gather information
       id: info
       run: |
         echo "::set-output name=date::$(date +'%Y-%m-%d %H:%M:%S')"
-        echo "::set-output name=tag::$(date +'%Yd%j')"
+        echo "::set-output name=tag::$(date +'%Yw%U')"
         echo "::set-output name=ref::$(git log -1 '--format=format:%H')"
       
     - name: 🛤️ Setup the build environment
@@ -43,11 +43,11 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: nightly
-        name: '🌙 Nightly build (${{ steps.info.outputs.tag }})'
+        tag_name: unstable
+        name: '🔥 Unstable build (${{ steps.info.outputs.tag }})'
         prerelease: true
         body: |
-          🚨 This is the nightly build of Carbon.
+          🚨 This is the unstable build of Carbon.
           The general public is advised to use one of the stable builds.
           This build is targeted at Developers and/or server owners with existing issues.
           
