Refactoring of Patcher; added new cmd line args

--- a/Carbon.Core/Carbon.Patch/Carbon.Patch.csproj
+++ b/Carbon.Core/Carbon.Patch/Carbon.Patch.csproj
@@ -14,7 +14,7 @@
     <Product>Carbon</Product>
     <AssemblyName>Carbon.Patch</AssemblyName>
     <Company>Raul-Sorin Sorban</Company>
-    <Copyright>Copyright © Carbon 2022</Copyright>
+    <Copyright>Copyright (c) 2022 Carbon [discord.gg/eXPcNKK4yd]</Copyright>
     <Description>A very lightweight version of Oxide, all working within Harmony's environment.</Description>
   </PropertyGroup>
 
