fix(ci): release title missing id

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -23,6 +23,11 @@ jobs:
   build:
     name: 🦺 Build
     runs-on: ubuntu-latest
+
+    outputs:
+      date: ${{ steps.info.outputs.date }}
+      tag: ${{ steps.info.outputs.tag }}
+      ref: ${{ steps.info.outputs.ref }}
       
     steps:    
     - name: 🔗 Checkout source code from github
@@ -73,7 +78,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        name: '🌙 Nightly build (${{ steps.info.outputs.tag }})'
+        name: '🌙 Nightly build (${{ needs.build.outputs.tag }})'
         tag_name: nightly
         prerelease: true
         body: |
@@ -81,7 +86,7 @@ jobs:
           The general public is advised to use one of the stable builds.
           This build is targeted at Developers and/or server owners with existing issues.
           
-          📅 Built at ${{ steps.info.outputs.date }} from commit ${{ steps.info.outputs.ref }}.
+          📅 Built at ${{ needs.build.outputs.date }} from commit ${{ needs.build.outputs.ref }}.
         files: |
           Release/Carbon.dll
           Release/Carbon.Patch.zip
