--- a/Carbon.Core/Carbon.Patch/Carbon.Patch.csproj
+++ b/Carbon.Core/Carbon.Patch/Carbon.Patch.csproj
@@ -89,4 +89,8 @@
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Carbon\Carbon.csproj" />
+  </ItemGroup>
 </Project>
