--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,13 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+    - uses: actions/checkout@v3
+    - name: Decrypt large secret
+      run: ./decrypt_secret.sh
+      env:
+        PFXCERT: ${{ secrets.PFXCERT }}
+        CERTPASS: ${{ secrets.CERTPASS }}
+    
     - name: 🔗 Checkout source code from github
       uses: actions/checkout@v3
 
