feat(ci): auto pr when unstable is released

--- a/.github/workflows/alpha-build.yml
+++ b/.github/workflows/alpha-build.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "alpha" ]
     
   pull_request:
-    branches: [ "alpha", "beta", "main" ]
+    branches: [ "alpha" ]
 
 jobs:
   build-linux:
