--- a/.github/workflows/unstable-build.yml
+++ b/.github/workflows/unstable-build.yml
@@ -21,7 +21,7 @@ env:
 
 jobs:
   build:
-    name: 🦺 Build
+    name: 🦺 Build alpha
     runs-on: ubuntu-latest
 
     outputs:
@@ -62,7 +62,7 @@ jobs:
         path: Release/
 
   tag:
-    name: 💾 Release
+    name: 💾 Release unstable
     runs-on: ubuntu-latest
     needs: build
 
@@ -94,22 +94,17 @@ jobs:
           Release/Carbon.Patch-Unix.zip
 
   staging:
-    name: 🔃 Update beta
+    name: 🔃 Update unstable branch
     runs-on: ubuntu-latest
-    needs: tag
+    needs: build
 
     steps:
-      - name: 🔗 Checkout source code from github
-        uses: actions/checkout@v3
-        with:
-          ref: alpha
-
-      - name: ⤵️ Merge alpha to beta (staging)
-        uses: devmasx/merge-branch@master
-        with:
-          type: now
-          from_branch: alpha
-          target_branch: beta
-          github_token: ${{ github.token }}
-          label_name: staging
-          message: ⚗️ Merge 'alpha' to 'beta' (staging)
+    - name: ⤵️ Merge alpha to beta (staging)
+      uses: devmasx/merge-branch@master
+      with:
+        type: now
+        from_branch: alpha
+        target_branch: beta
+        github_token: ${{ github.token }}
+        message: |
+          ci(auto): 🤖 Merge branch 'alpha' into 'beta'
