--- a/Carbon.Core/Carbon/Carbon.csproj
+++ b/Carbon.Core/Carbon/Carbon.csproj
@@ -2,35 +2,34 @@
   <PropertyGroup>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <TargetFrameworks>net48</TargetFrameworks>
-    <ProjectGuid>{DB7AC4B9-E0F3-4E8F-B977-DD32709359A4}</ProjectGuid>
-  </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)' == 'Release'">
     <Deterministic>true</Deterministic>
     <FileAlignment>512</FileAlignment>
-  </PropertyGroup>
 
-  <PropertyGroup>
-    <TargetName>Carbon</TargetName>
-    <AssemblyVersion>0.0.1.0</AssemblyVersion>
+    <ProjectGuid>{DB7AC4B9-E0F3-4E8F-B977-DD32709359A4}</ProjectGuid>
+    <Configurations>Debug;Release;ReleaseUnix;DebugUnix</Configurations>
   </PropertyGroup>
 
   <PropertyGroup>
     <Product>Carbon</Product>
+    <AssemblyName>Carbon.Core</AssemblyName>
+    <Version>1.1.0.0</Version>
+
     <Company>Raul-Sorin Sorban</Company>
     <Copyright>Copyright © Carbon 2022</Copyright>
+    <PackageProjectUrl>https://discord.gg/eXPcNKK4yd</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/Carbon-Modding/Carbon.Core</RepositoryUrl>
     <Description>A very lightweight version of Oxide, all working within Harmony's environment.</Description>
   </PropertyGroup>
 
   <PropertyGroup>
-  <AssemblyName>Carbon-1.1.0-202209222352</AssemblyName>
+    <TargetName>Carbon</TargetName><!-- This has impact on the output file name -->
     <VersionPrefix>$([System.DateTime]::UtcNow.ToString("yyyy.MM.dd.HHmm"))</VersionPrefix>
     <VersionSuffix>$(Configuration)</VersionSuffix>
-    <FileVersion>1.1.0</FileVersion>
-  </PropertyGroup>
 
-  <PropertyGroup>
-    <Configurations>Debug;Release;ReleaseUnix;DebugUnix</Configurations>
+    <InformationalVersion>$(VersionPrefix)-$(VersionSuffix)</InformationalVersion>
+    <AssemblyVersion>$(Version)</AssemblyVersion>
+    <FileVersion>$(VersionPrefix)</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
@@ -95,7 +94,7 @@
     </Reference>
   </ItemGroup>
 
-  <ItemGroup>
+ <ItemGroup>
     <Reference Include="0Harmony">
       <HintPath>..\..\Rust\RustDedicated_Data\Managed\0Harmony.dll</HintPath>
     </Reference>
@@ -198,4 +197,15 @@
     <PackageReference Include="protobuf-net" Version="3.1.17" />
     <PackageReference Include="protobuf-net.Core" Version="3.1.17" />
   </ItemGroup>
+
+  <Target Name="CustomAfterBuild" AfterTargets="AfterBuild">
+    <WriteLinesToFile File=".rndasm" Overwrite="true" 
+        Lines="$(Product)-$([System.DateTime]::UtcNow.ToString('HHmmfff'))" />
+    <!--<Message Text="A new assembly name was generated" Importance="high"/>-->
+  </Target>
+
+  <PropertyGroup Condition="Exists('.rndasm') AND $(Configuration.Contains('Debug'))">
+    <AssemblyName>$([System.Text.RegularExpressions.Regex]::Replace(
+	    $([System.IO.File]::ReadAllText('$(SolutionDir)\Carbon\.rndasm')), '\r?\n?', ''))</AssemblyName>
+  </PropertyGroup>
 </Project>
