--- a/Carbon.Core/Carbon.Doorstop/Carbon.Doorstop.csproj
+++ b/Carbon.Core/Carbon.Doorstop/Carbon.Doorstop.csproj
@@ -1,42 +1,48 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" DefaultTargets="Clean;Build">
   <PropertyGroup>
-    <Configurations>Debug;Release;ReleaseUnix;DebugUnix</Configurations>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <TargetFrameworks>net48</TargetFrameworks>
+
     <Deterministic>true</Deterministic>
     <FileAlignment>512</FileAlignment>
-    <PlatformTarget>AnyCPU</PlatformTarget>
+
     <ProjectGuid>{6872448A-98BF-45B3-88D8-AF80F8E562CA}</ProjectGuid>
-    <TargetFrameworks>net48</TargetFrameworks>
+    <Configurations>Debug;Release;ReleaseUnix;DebugUnix</Configurations>
   </PropertyGroup>
 
   <PropertyGroup>
     <Product>Carbon</Product>
-    <AssemblyName>Carbon.Doorstop</AssemblyName>
+    <Version>1.1.0.0</Version>
+
     <Company>Raul-Sorin Sorban</Company>
     <Copyright>Copyright © Carbon 2022</Copyright>
+    <PackageProjectUrl>https://discord.gg/eXPcNKK4yd</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/Carbon-Modding/Carbon.Core</RepositoryUrl>
     <Description>A very lightweight version of Oxide, all working within Harmony's environment.</Description>
   </PropertyGroup>
 
   <PropertyGroup>
-    <Version>1.0.0.0</Version>
-    <FileVersion>$(Version)</FileVersion>
+    <TargetName>Carbon.Doorstop</TargetName><!-- This has impact on the output file name -->
+    <VersionPrefix>$([System.DateTime]::UtcNow.ToString("yyyy.MM.dd.HHmm"))</VersionPrefix>
+    <VersionSuffix>$(Configuration)</VersionSuffix>
+
+    <InformationalVersion>$(VersionPrefix)-$(VersionSuffix)</InformationalVersion>
+    <AssemblyVersion>$(Version)</AssemblyVersion>
+    <FileVersion>$(VersionPrefix)</FileVersion>
+    <AssemblyName>$(TargetName)</AssemblyName>
   </PropertyGroup>
 
-  <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-  </PropertyGroup>
-
-    <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
+  <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
-    <DefineConstants>DEBUG;TRACE;WIN</DefineConstants>
+    <DefineConstants>DEBUG;WIN</DefineConstants>
     <OutputPath>bin\Debug\</OutputPath>
     <DebugType>embedded</DebugType>
     <Optimize>true</Optimize>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)' == 'DebugUnix'">
+    <PropertyGroup Condition="'$(Configuration)' == 'DebugUnix'">
     <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
-    <DefineConstants>DEBUG;TRACE;WIN</DefineConstants>
+    <DefineConstants>DEBUG;UNIX</DefineConstants>
     <OutputPath>bin\DebugUnix\</OutputPath>
     <DebugType>embedded</DebugType>
     <Optimize>true</Optimize>
@@ -44,7 +50,7 @@
 
   <PropertyGroup Condition="'$(Configuration)' == 'Release'">
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <DefineConstants>TRACE;WIN</DefineConstants>
+    <DefineConstants>WIN</DefineConstants>
     <OutputPath>bin\Release\</OutputPath>
     <DebugType>none</DebugType>
     <Optimize>true</Optimize>
@@ -52,7 +58,7 @@
 
   <PropertyGroup Condition="'$(Configuration)' == 'ReleaseUnix'">
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <DefineConstants>TRACE;UNIX</DefineConstants>
+    <DefineConstants>UNIX</DefineConstants>
     <OutputPath>bin\ReleaseUnix\</OutputPath>
     <DebugType>none</DebugType>
     <Optimize>true</Optimize>
