--- a/Carbon.Core/Carbon.CodeGen/Carbon.CodeGen.csproj
+++ b/Carbon.Core/Carbon.CodeGen/Carbon.CodeGen.csproj
@@ -18,6 +18,7 @@
   <PropertyGroup>
     <Version>1.0.0.0</Version>
     <FileVersion>$(Version)</FileVersion>
+    <OutputType>Exe</OutputType>
   </PropertyGroup>
 
   <PropertyGroup>
