--- a/Carbon.Core/Carbon/Carbon.csproj
+++ b/Carbon.Core/Carbon/Carbon.csproj
@@ -199,11 +199,13 @@
     <PackageReference Include="protobuf-net.Core" Version="3.1.17" />
   </ItemGroup>
 
-  <Target Name="CustomAfterBuild" AfterTargets="AfterBuild">
+  <Target Name="CustomBeforeCompile" AfterTargets="BeforeCompile">
     <WriteLinesToFile File=".rndasm" Overwrite="true" Lines="$(Product)-$([System.DateTime]::UtcNow.ToString('HHmmfff'))" />
-    <Exec Command="copy $(OutputPath)$(TargetName).dll $(OutputPath)Carbon.dll" IgnoreExitCode="True" />
-        
     <!--<Message Text="A new assembly name was generated" Importance="high"/>-->
+  </Target>
+
+  <Target Name="CustomAfterBuild" AfterTargets="AfterBuild">
+    <Exec Command="copy $(OutputPath)$(TargetName).dll $(OutputPath)Carbon.dll" IgnoreExitCode="True" />        
   </Target>
 
   <PropertyGroup Condition="Exists('.rndasm') AND $(Configuration.Contains('Debug'))">
