fix: AssemblyName was broken

--- a/Carbon.Core/Carbon/Carbon.csproj
+++ b/Carbon.Core/Carbon/Carbon.csproj
@@ -12,7 +12,7 @@
 
   <PropertyGroup>
     <Product>Carbon</Product>
-    <AssemblyName>Carbon.Core.AssemblyName</AssemblyName>
+    <AssemblyName>Carbon.Core</AssemblyName>
     <Version>1.1.0.0</Version>
 
     <Company>Raul-Sorin Sorban</Company>
