fix: cleanup targets

--- a/Carbon.Core/Carbon/Carbon.csproj
+++ b/Carbon.Core/Carbon/Carbon.csproj
@@ -201,6 +201,7 @@
   <Target Name="CleanOutput" AfterTargets="Clean">
     <!-- <Message Text=">>> CleanOutput" Importance="high"/> -->
     <Delete Files="$(OutputPath)Carbon.dll" />
+    <Delete Files="$(OutputPath)$(TargetName).dll" />
   </Target>
 
   <Target Name="MoveOutput" AfterTargets="AfterBuild">
