--- a/.github/workflows/develop-build.yml
+++ b/.github/workflows/develop-build.yml
@@ -33,7 +33,7 @@ jobs:
     - name: 🔗 Checkout source code from github
       uses: actions/checkout@v3
       with:
-        ref: development
+        ref: develop
         
     - name: 📅 Prepare the environment
       id: info
