fix: action names for badges

--- a/.github/workflows/develop-build.yml
+++ b/.github/workflows/develop-build.yml
@@ -5,7 +5,7 @@
 #  |______|___|___|___|__|______/_______|__|____|
 #                         discord.gg/eXPcNKK4yd
 # 
-name: 🥉 Develop
+name: 🥉 Develop branch
 
 on:
   # allow manual action trigger
