--- a/.github/workflows/staging-build.yml
+++ b/.github/workflows/staging-build.yml
@@ -5,7 +5,7 @@
 #  |______|___|___|___|__|______/_______|__|____|
 #                         discord.gg/eXPcNKK4yd
 # 
-name: 🥈 Staging
+name: 🥈 Staging branch
 
 on:
   # allow manual action trigger
