--- a/.github/workflows/staging-build.yml
+++ b/.github/workflows/staging-build.yml
@@ -113,7 +113,7 @@ jobs:
       uses: peter-evans/create-pull-request@v4
       id: cpr
       with:
-        branch: staging-promotion
+        branch: beta-promotion
         delete-branch: true
         labels: automation
         title: |
