--- a/.github/workflows/staging-build.yml
+++ b/.github/workflows/staging-build.yml
@@ -96,13 +96,13 @@ jobs:
   staging:
     name: 🔃 Update unstable branch
     runs-on: ubuntu-latest
-    needs: build
+    needs: tag
 
     steps:
     - name: 🔗 Checkout source code from github
       uses: actions/checkout@v3
       with:
-        ref: staging
+        ref: develop
 
     - name: 🧹 Reset branch
       run: |
